# for-writing

./: README.md  about.yaml  gitignore
palcol/: LICENSE.txt  README.md  about.yaml  pyproject.toml
palcol/changes/: TODO-FR.txt
palcol/contrib/: README.md
palcol/contrib/colors/: README.md  test-2.html  test-3.html  test-4.html  test-5.html  test-6.html  test-7.html  test-8.html
palcol/contrib/css/: README.md  data.css  palettes.css.map  predata.scss  showcase.html
palcol/contrib/latex/: showcase.tex
palcol/contrib/lua/: data.lua  showcase.lua
palcol/contrib/palettes/: test-2.html  test-3.html  test-4.html  test-5.html  test-6.html  test-7.html  test-8.html  test-palette.html  test.html
palcol/contrib/products/: README.md
palcol/contrib/readme-common/: changes-folder.md  changes-status.md
palcol/contrib/sass/: palettes.scss
palcol/data/: palcol.json  palettes.json
palcol/data/luadraw/: palettes.lua  showcase.tex
palcol/products/: palettes.json  palettes.json.CREDITS.md
palcol/products/luadraw/: palettes.lua
palcol/readme/: about.md  about.yaml  credits.md  implementations.md  languages.md  products.md  prologue.md
palcol/readme/languages/: python.md
palcol/readme/products/: luadraw.md
palcol/src/palcol/: __about__.py  __init__.py
palcol/tools/: 01-fixed-nodoc-pdfs-macOS.sh  launch.sh
palcol/tools/01-contrib/: 01-JSON-add-matplotlib.py  01-JSON-create-from-matplotlib-colormaps.py  01-build-json-colormaps.py  02-JSON-add-asymptote.py  02-JSON-add-users-palettes.py  02-build-lang-coding.py  03-JSON-add-contribs.py  03-JSON-add-users-palettes.py  04-JSON-normalize.py  10-add-palettes-CODE.py  10-code-contribs.py  10-final-palettes.py  mp-names.json  (+3 more)
(+8786 files in other folders)
