[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palcol"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "projetmbc", email = "projetmbc@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/projetmbc/palcol#readme"
Issues = "https://github.com/projetmbc/palcol/issues"
Source = "https://github.com/projetmbc/palcol"

[tool.hatch.version]
path = "src/palcol/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/palcol tests}"

[tool.coverage.run]
source_pkgs = ["palcol", "tests"]
branch = true
parallel = true
omit = [
  "src/palcol/__about__.py",
]

[tool.coverage.paths]
palcol = ["src/palcol", "*/palcol/src/palcol"]
tests = ["tests", "*/palcol/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build]
sources = ["src"]
include = []

[tool.hatch.envs.debug]
dependencies = []
